5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4157/executions/1836_1277.log
== SUBMITION (2019-07-01 23:15:26) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite1:"))
n2 = int(input("digite2:"))
mat=array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])
a = 1
b = 0
aux = 111
vet = zeros(7,b dtype=int)
for i in range(7):
	vet[i] = aux
	aux+=111
for i in range(7):
	if(n==vet[i]):
		a = i
	if(n2==vet[i]):
		b=i
print(mat[a,b])
-- EXECUTION TIME:
0.775797
-- ERROR:
  File "/home/codebench/codes/1836/1277/main.py", line 15
    vet = zeros(7,b dtype=int)
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:16:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite1:"))
n2 = int(input("digite2:"))
mat=array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])
a = 1
b = 0
aux = 111
vet = zeros(7,dtype=int)
for i in range(7):
	vet[i] = aux
	aux+=111
for i in range(7):
	if(n==vet[i]):
		a = i
	if(n2==vet[i]):
		b=i
print(mat[a,b])
-- EXECUTION TIME:
1.10458
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
